--- a/assets/views/dashboard.pug
+++ b/assets/views/dashboard.pug
@@ -1,8 +1,7 @@
 extends includes/base
 block globals
-    - var title= 'Bienvenido de nuevo'
+    - var title= 'Bienvenido de nuevo, Eistein'
     - var body_id= 'index'
-    - var body_class= 'theme-default'
 
 block breadcrumb
     -var items = [{name : "Inicio", href : './dashboard.html'}, {name : "Dashboard", href : ''}]
@@ -10,14 +9,7 @@ block breadcrumb
 
 block content
     .col-md-12.col-lg-8
-        +card('Typeahead', 'de Twitter', '')
-            form
-                .row
-                    .form-group.input-field.col-lg-12
-                        input#example.typeahead.form-control(type="text")
-                        label(for="example") Ejemplo de label
-
-        +card('Directorio', 'Del personal', '#')
+        +card('Directorio', '#', 'pull-up')
             .table-responsive
                 table.datagrid
                     thead
@@ -49,35 +41,6 @@ block content
                             td Pending
     
     .col-md-12.col-lg-4
-        +card('Card en blanco', 'Card', '#')
+        +card('Card en blanco', '#')
         
-        +card('Card en blanco', 'Card', '#')
-
-block append scripts
-    script.
-      let $ = require('jquery');
-
-      var typeahead = require("typeahead.js-browserify");
-      typeahead.loadjQueryPlugin();
-
-      var Bloodhound = require("typeahead.js-browserify").Bloodhound
-      var engine = new Bloodhound({
-        queryTokenizer: Bloodhound.tokenizers.whitespace,
-        datumTokenizer: Bloodhound.tokenizers.whitespace,
-        prefetch: 'https://twitter.github.io/typeahead.js/data/films/post_1960.json',
-        remote: {
-            url: 'https://twitter.github.io/typeahead.js/data/films/queries/%QUERY.json',
-            wildcard: '%QUERY'
-        }
-      });
-
-      $('.typeahead').typeahead({
-        hint: true,
-        highlight: true,
-        minLength: 1
-        },
-        {
-        name: 'states',
-        display: 'value',
-        source: engine
-      });
+        +card('Card en blanco', '#')
